# agrobr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.pt-BR.md  canopy.yml  index.html  lychee.toml  mkdocs.yml  pyproject.toml  release_notes.md  requirements.txt
.github/: FUNDING.yml
.github/workflows/: canopy.yml  check-links.yml  docs.yml  health_check.yml  integration_tests.yml  landing_data.yml  publish.yml  structure_monitor.yml  tests.yml
agrobr/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  export.py  models.py  snapshots.py  sync.py
agrobr/abiove/: api.py  client.py  models.py  parser.py
agrobr/acervo_fundiario/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/alerts/: notifier.py
agrobr/ana/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/anda/: api.py  client.py  models.py  parser.py
agrobr/anec/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/antaq/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/b3/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/bcb/: __init__.py  api.py  bigquery_client.py  client.py  focus_api.py  focus_client.py  models.py  parser.py  ptax_api.py  ptax_client.py  sgs_api.py  sgs_client.py  sgs_models.py
agrobr/cache/: __init__.py  duckdb_store.py  history.py  keys.py  migrations.py  policies.py
agrobr/cepea/: api.py  client.py
agrobr/cftc/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/comexstat/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/comtrade/: api.py  client.py
agrobr/conab/: api.py  client.py
agrobr/contracts/: __init__.py  conab.py  datasets.py  ibge.py
agrobr/datasets/: __init__.py  abate_trimestral.py  balanco.py  base.py  cadastro_rural.py  censo_agropecuario.py  censo_agropecuario_historico.py  censo_agropecuario_legado.py  censo_agropecuario_municipal_1985.py  clima.py  comercio_internacional.py  condicao_lavouras.py  credito_rural.py  custo_producao.py  desmatamento.py  deterministic.py  estimativa_safra.py  exportacao.py  exportacao_anec.py  extrativismo_vegetal.py  fertilizante.py  futuros_agricolas.py  importacao.py  leite_industrial.py  movimentacao_portuaria.py  oferta_demanda_global.py  pecuaria_municipal.py  pib_agro.py  posicionamento_fundos.py  preco_atacado.py  preco_diario.py  producao_anual.py  progresso_safra.py  queimadas.py  seguro_rural.py  serie_historica_safra.py  silvicultura.py  uso_do_solo.py  zoneamento_agricola.py
agrobr/defensivos/: __init__.py  api.py  cache.py  client.py  models.py  parser.py
agrobr/deral/: api.py  client.py  models.py  parser.py
agrobr/desmatamento/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/embrapa_solos/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/funai/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/health/: __init__.py  checker.py  doctor.py  registry.py  reporter.py  state.py
agrobr/http/: __init__.py  browser.py  rate_limiter.py  retry.py  settings.py  user_agents.py
agrobr/ibama/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/ibge/: __init__.py  _helpers.py  api.py  censo_api.py  censo_municipal_1985.py  censo_tables.py  client.py  ftp_client.py  legacy_api.py  legacy_parser.py  pesquisas_api.py
agrobr/icmbio/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/imea/: api.py  client.py  models.py
agrobr/incra/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/inmet/: __init__.py  api.py  client.py  parser.py
agrobr/lista_suja/: __init__.py  api.py  client.py  models.py  parser.py
agrobr/mapbiomas/: api.py  client.py  models.py  parser.py
agrobr/mapbiomas_alerta/: __init__.py  api.py  client.py  (+2 more)
calculadora/: index.html
docs/: canopy-history.json  canopy.html  index.md  licenses.md  quickstart.md
en/: index.html
examples/: pipeline_cache.py  sicar_streaming.py
scripts/: enrich_municipios_centroids.py  update_golden.py  update_landing_data.py
tests/: conftest.py  helpers.py  test_benchmark_scalability.py  test_cli.py  test_golden.py  test_models.py  test_sync.py
(+640 files in other folders)
